css/styles.css
/* Fonts */
@font-face {
  font-family: 'Aldrich';
  src: url('/fonts/Aldrich.woff2') format('woff2');
  font-display: swap;
}
@font-face {
  font-family: 'Outfit';
  src: url('/fonts/Outfit-VariableFont_wght.woff2') format('woff2-variations');
  font-weight: 100 900;
  font-display: swap;
}
/* <weight>: Use a value from 100 to 900
// <width>: Use a value from 75 to 100
// <uniquifier>: Use a unique and descriptive class name */

/* GLOABAL CSS */
* {
  box-sizing: border-box;
  list-style: none;
}
html, header, body, main, footer{
  min-width: 320px;
}
a {
  text-decoration: none;
  color:rgb(255, 255, 255);
}

/* HTML DOCUMENT CSS */
html {
  scroll-behavior: smooth;
  font-size: 16px;
  font-family: 'Outfit', 'Trebuchet MS';
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden;
}

/* BODY CSS */
body {
  padding-top: constant(safe-area-inset-top); /* legacy iOS Safari */
  padding-top: env(safe-area-inset-top, 20px); /* modern fallback */
  margin: 0;
}

/* Header CSS */
header  {
  position: fixed;
  padding: 0 16px;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px); /* Safari support */
  height: 56px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1000;
}
.logo svg {
  height: 40px;
  width: auto;
}
.logo{
  z-index: 1000;
}
.hamburger-button  {
  height: 40px;
  width: 48px;
  border: none;
  display: flex;
  background-color: transparent;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}
.hamburger-svg  {
  height: 36px;
  width: 40px;
  cursor: pointer;
}
.line {
  stroke: rgb(255, 225, 0);
  stroke-width: 8;
  stroke-linecap: round;
  transform-origin: center;
  transition: transform 0.3s ease;
}
.line.top {
  transform: translateY(-8px);
}
.line.bottom {
  transform: translateY(8px);
}
.hamburger-button.active .line {
  transition: transform 0.3s ease;
}
.hamburger-button.active .line.top {
  transform: rotate(45deg);
}
.hamburger-button.active .line.bottom {
  transform: rotate(-45deg);
}
.nav-bar  {
  display: none;
}

/* Nav Bar Mobile Display */
#main-navigation {
  position: fixed;
  top: -100vh;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-image: url('/images/navbar_background_image.jpg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  transition: top 0.3s ease-in;
  z-index: 999;
  display: flex;
  justify-content: center;
  align-items: center;
}
.disable-transitions * {
  transition: none !important;
}
#main-navigation.active {
  top: 0;
}
/* Animate nav links when menu opens */
#main-navigation.nav-open .nav-link {
  opacity: 1;
  transform: translateY(0);
}
/* Optional: stagger each link for a smoother effect */
#main-navigation.nav-open .nav-link:nth-child(1) { transition-delay: 0.30s; }
#main-navigation.nav-open .nav-link:nth-child(2) { transition-delay: 0.33s; }
#main-navigation.nav-open .nav-link:nth-child(3) { transition-delay: 0.36s; }
#main-navigation.nav-open .nav-link:nth-child(4) { transition-delay: 0.39s; }
/* Add more if needed */
.nav-link{
  font-family: 'Aldrich', sans-serif;
  line-height: 5rem;
  font-size: 1.5rem;
  opacity: 0;
  transform: translateY(-10px);
  transition: opacity 0.4s ease, transform 0.3s ease;
}
.nav-link:hover {
    background: linear-gradient(90deg, #d4af37, #e7c75e, #e2dcc0, #e7c75e);
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
}

/* Main CSS */
.hero-container {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: 100vh;
  min-height: 560px;
  width: 100%;
  background: linear-gradient(rgba(255, 255, 255, 0.0), rgba(0, 0, 0, .4), rgba(0, 0, 0, 1));
}
.hero-background-picture  {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  object-fit: cover;
  object-position: center;
  z-index: -1;
}
.hero-background-picture img  {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}
h1  {
  font-family: 'Aldrich', 'Trebuchet MS', Arial, sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 3.2rem;
  width: 100%;
  font-weight: 500;
  background: linear-gradient(90deg, #e2c12a, #e7c75e, #fff8dc, #e7c75e);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  text-align: center;
}
.hero-text  {
  width: 100%;
  font-size: 2rem;
  font-weight: 300;
  background: linear-gradient(90deg, #d4af37, #e7c75e, #fff8dc, #e7c75e);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  text-align: center;
}
.hero-description {
  width: 80%;
  max-width: 640px;
  font-size: 1.1rem;
  font-weight: 300;
  line-height: 1.8rem;
  color: rgb(255, 255, 255);
  text-align: center;
  text-wrap: balance;
}
.call-link  {
  margin-top: 14vh;
  font-size: 1.2rem;
  width: 80%;
  max-width: 360px;
  height: 48px;
  letter-spacing: 2px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: radial-gradient(135deg, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.0));
  backdrop-filter: blur(8px);
  -webkit-backdrop-filter: blur(8px); /* Safari support */
  border-radius: 20px;
  border: 1px solid rgba(255, 255, 255, 0.05);
  box-shadow: 0 8px 12px 0 rgba(255, 255, 255, 0.1);
}

/* Services Carousel */
.services-container{
  height: 100vh;
  width: 100%;
  padding: 32px 0 0;
  overflow-x: hidden;
  background-color: #000000;
}
.carousel {
  will-change: transform;
  scroll-behavior: smooth;
  scroll-snap-type: x mandatory; 
  display: flex;
  overflow-x: auto;
  height: 426px;
  gap: 24px;
  padding: 0 32px;
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* IE 10+ */
 
}
.carousel::-webkit-scrollbar {
  display: none; /* Chrome, Safari */
}
.carousel-card {
  scroll-snap-align: center;
  flex: 0 0 auto;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  width: 320px;
  border-radius: 10px;
  overflow: hidden;
  aspect-ratio: 3 / 4;
}
.carousel-card img{
  height: 100%;
  width: 100%;
  object-fit: cover;
}
.carousel-card::before{
  content: "";
  position: absolute;
  inset: 0;
  background: linear-gradient(to top, rgba(0,0,0,0.5), rgba(0,0,0,0));
  z-index: 1;

}
.carousel-card h3{
  position: absolute;
  bottom: 0;
  font-size: 1.5rem;
  margin: 0;
  padding: 16px 24px;
  color: #ffffff;
  text-shadow: 0 2px 4px rgba(0,0,0,0.6);
  z-index: 2;
}
.carousel-indicators  {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 24px;
  gap: 16px;
}
/* Removes the default blue outline on focus */
.carousel-indicators button:focus {
  outline: none;
}
/* Adds a custom focus state that's still accessible */
.carousel-indicators button:focus-visible {
  box-shadow:   0 0 0 2px #007bff; /* Example: White border, then a blue one */
}
.carousel-indicators button {
  border: none;
  border-radius: 50%;
  width: 12px;
  height: 12px;
  background: rgb(69, 69, 69);  
  cursor: pointer;
}
.carousel-indicators button.active {
background: rgb(255, 255, 255);          
  outline: none;
}
h2  {
  font-family: 'Aldrich', 'Trebuchet MS', Arial, sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 2rem;
  width: 100%;
  font-weight: 500;
  background: linear-gradient(90deg, #e2c12a, #e7c75e, #fff8dc, #e7c75e);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  text-align: center;
  margin: 56px 0 24px;
  
}
.service-list-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
}
.services-list{
  line-height: 2rem;
  color: white;
}
ul li{
  list-style-type: disc;
}
/* Footer CSS */
footer  {
  min-height: 56px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'Outfit', Arial, sans-serif;
  font-size: .9rem;
  color:rgb(69, 69, 69,);
  background-color: #f5f5f7;
}

/* Desktop Changes */
@media (min-width: 992px) {
  .hamburger-button {
    display: none;
  }
  #main-navigation {
    position: static;
    height: auto;
    background: none;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    padding-right: 1rem;
  }
  .nav-menu {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .nav-link {
    height: 56px;
    padding: 0 16px;
    opacity: 1;
    transform: none;
    pointer-events: auto;
    font-size: 1.2rem;
    line-height: normal;
    transition: none;
    display: flex;
    align-items: center;
  }
  .nav-link a {
    color: rgb(255, 255, 255); /* Ensure visibility */
  }
  .carousel {
    height: 540px; 
  }
  .carousel-card {
    width: 960px;
    aspect-ratio: 16 / 9;
  }
  h2{
    margin-bottom: 4px;
  }
  .service-list-container{
    gap: 32px;
  }
  .services-list{
  line-height: 1.5rem;
  color: white;
} 
}

